--- a/LunacidAP.csproj
+++ b/LunacidAP.csproj
@@ -7,6 +7,7 @@
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,7 +27,6 @@
 	  <Reference Include="Assembly-CSharp">
 		  <HintPath>/mnt/Games and Media Collection/SteamLibrary/steamapps/common/Lunacid/LUNACID_Data/Managed/Assembly-CSharp.dll</HintPath>
 	  </Reference>
-  </ItemGroup>
-  
+  </ItemGroup>  
 
 </Project>
