Add the rest of the 0.3.0 features and fixes

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,32 @@ bin/Debug/netstandard2.0/System.Reflection.Emit.ILGeneration.dll
 bin/Debug/netstandard2.0/System.Reflection.Emit.Lightweight.dll
 bin/Debug/netstandard2.0/System.Reflection.TypeExtensions.dll
 bin/Debug/netstandard2.0/System.Threading.dll
+bin/Release/netstandard2.0/Archipelago.MultiClient.Net.dll
+bin/Release/netstandard2.0/Assembly-CSharp-firstpass.dll
+bin/Release/netstandard2.0/Assembly-CSharp.dll
+bin/Release/netstandard2.0/LunacidAP.deps.json
+bin/Release/netstandard2.0/LunacidAP.pdb
+bin/Release/netstandard2.0/NavMeshComponents.dll
+bin/Release/netstandard2.0/Newtonsoft.Json.dll
+bin/Release/netstandard2.0/System.Collections.NonGeneric.dll
+bin/Release/netstandard2.0/System.Collections.Specialized.dll
+bin/Release/netstandard2.0/System.ComponentModel.dll
+bin/Release/netstandard2.0/System.ComponentModel.Primitives.dll
+bin/Release/netstandard2.0/System.ComponentModel.TypeConverter.dll
+bin/Release/netstandard2.0/System.IO.FileSystem.Primitives.dll
+bin/Release/netstandard2.0/System.Linq.dll
+bin/Release/netstandard2.0/System.Reflection.Emit.dll
+bin/Release/netstandard2.0/System.Reflection.Emit.ILGeneration.dll
+bin/Release/netstandard2.0/System.Reflection.Emit.Lightweight.dll
+bin/Release/netstandard2.0/System.Reflection.TypeExtensions.dll
+bin/Release/netstandard2.0/System.Threading.dll
+bin/Release/netstandard2.0/Unity.InputSystem.dll
+bin/Release/netstandard2.0/Unity.Postprocessing.Runtime.dll
+bin/Release/netstandard2.0/Unity.TextMeshPro.dll
+bin/Release/netstandard2.0/UnityEngine.UI.dll
+obj/Release/netstandard2.0/LunacidAP.csproj.CopyComplete
+obj/Release/netstandard2.0/LunacidAP.csproj.CoreCompileInputs.cache
+obj/Release/netstandard2.0/LunacidAP.csproj.FileListAbsolute.txt
+obj/Release/netstandard2.0/LunacidAP.dll
+obj/Release/netstandard2.0/LunacidAP.pdb
+obj/Release/netstandard2.0/PluginInfo.cs
