Add gifting to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ obj/Release/netstandard2.0/LunacidAP.dll
 obj/Release/netstandard2.0/LunacidAP.pdb
 obj/Release/netstandard2.0/PluginInfo.cs
 bin/Release/netstandard2.0/LunacidAP.dll
+bin/Debug/netstandard2.0/Archipelago.Gifting.Net.dll
