--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ obj/Release/netstandard2.0/LunacidAP.pdb
 obj/Release/netstandard2.0/PluginInfo.cs
 bin/Release/netstandard2.0/LunacidAP.dll
 bin/Debug/netstandard2.0/Archipelago.Gifting.Net.dll
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/settings.json
