--- a/LunacidAP.csproj
+++ b/LunacidAP.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>LunacidAP</AssemblyName>
     <Description>Randomizer for Archipelago</Description>
-    <Version>0.5.6</Version>
+    <Version>0.6.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
 	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Archipelago.Gifting.Net" Version="0.2.5" />
-    <PackageReference Include="Archipelago.MultiClient.Net" Version="6.0.0-rc5" />
+    <PackageReference Include="Archipelago.Gifting.Net" Version="0.3.1" />
+    <PackageReference Include="Archipelago.MultiClient.Net" Version="6.0.0" />
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
