add gitignore for gifting

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ bin/Debug/netstandard2.0/Archipelago.Gifting.Net.dll
 
 .fake
 bin/Release/netstandard2.0/Archipelago.Gifting.Net.dll
+bin/Release/netstandard2.0/Archipelago.Gifting.Net.dll
