--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ bin/Debug/netstandard2.0/Archipelago.Gifting.Net.dll
 .fake
 bin/Release/netstandard2.0/Archipelago.Gifting.Net.dll
 bin/Release/netstandard2.0/Archipelago.Gifting.Net.dll
+CustomMusic.zip
